# sous

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  import.py  pyproject.toml  pyrightconfig.json  requirements.txt  shop.py
.github/workflows/: ios-tests.yml  python-tests.yml
docs/ios/: README.md
ios/Sous/: .gitignore  Makefile  project.yml
ios/Sous/Sous/: ContentView.swift  SousApp.swift
ios/Sous/Sous/Models/: Ingredient.swift  Recipe.swift  ShoppingListConfig.swift  ShoppingListItem.swift
ios/Sous/Sous/Parser/: SousParser.swift
ios/Sous/Sous/TestFixtures/: mapo-tofu.sous  pozole-verde.sous  roasted-broccoli.sous
ios/Sous/Sous/Utilities/: BookmarkManager.swift
ios/Sous/Sous/ViewModels/: CookbookViewModel.swift  ShoppingListViewModel.swift
ios/Sous/Sous/Views/: CookbookPickerView.swift  IngredientSelectionView.swift  RecipeListView.swift  ShoppingListView.swift
ios/Sous/SousTests/: ShoppingListConfigTests.swift  SousParserTests.swift
ios/Sous/SousUITests/: SousUITests.swift
sous/: attribute.py  cli.py  comment.py  cookbook.py  document.py  downloader.py  header.py  ingredient.py  item.py  prose.py  recipe.py  scraped_recipe.py  shopping_list.py  shopping_list_config.py  todoist.py  utils.py
tests/: test_ingredient.py  test_shopping_list.py
