[project]
name = "sous"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "click>=8.2.1",
    "ingredient-parser-nlp>=2.2.0",
    "recipe-scrapers>=15.9.0",
    "requests>=2.32.5",
    "simple-term-menu>=1.6.6",
    "todoist-api-python>=3.1.0",
]

[project.scripts]
sous = "sous.cli:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
lint.select = ["E", "F", "I", "B", "ANN"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]
